--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <title>Công chúa tinh tinh của anh</title>
 </head>
 <body>
-    <h1>ngủ ngonnn nha cục cưng💕💕
+    <h1>HỌC LÀM WEB
     </h1>
+    <p>Xin chào ,hôm nay là ngày thứ 2 , tôi học làm code
+        mặc dù code thật sự rất thú vị nhưng có đôi chút phức tạp
+        đặc biệt là khi phải tìm hiểu một cái gì đó mới mà ta không biết <br>
+-Tổng hợp lại chút nhé , những cái tôi đã học được <br>
+ + tôi biết cách tạo thư mục code và đưa nó lên trình duyệt <br> 
+ + tôi biết cách sử dụng github để đưa nó lên internet dạng link và người khác có thể coi
+ (phần phức tạp nhất là github) <br>    
+ + tôi hiểu được một vài thẻ cơ bản sử dụng cho khi code hay có thể nói những thẻ này khá quan trọng
+vì không có nó làm sao mà ngồi viết code😅 <br>
++ và tôi biết cách chèn dán link ảnh vô code bằng thẻ <br>
+
+</p>
+<img src="https://laptrinhcuocsong.com/images/bei-zian-dzuein/bei-zian-dzuein-5.jpg"
+width="600">
 </body>
 </html>
